# iz_2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
project/include/: matrix_operations.h
project/src/: consistent_sum_columns.c  main.c  matrix_operations.c  memoryLeak  parallel_sum_columns.c  stress_test.c  trash_test.c
project/tests/: matrix_test.cpp  stress_gtest.cpp
